# scrinium

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  justfile
.ast-grep/rules/: palette-const-duplicate.yml  type-color-map.yml  walkdir-raw-traverse.yml
.claude/: settings.json
.claude/hooks/: modern-cli.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: bundle.rs  cli.rs  document.rs  graph.rs  lib.rs  main.rs  validate.rs
src/tui/: app.rs  browser.rs  editor.rs  effects.rs  frontmatter.rs  mod.rs  theme.rs  ui.rs
tests/: bundle_integration.rs  graph_integration.rs  validate_integration.rs
