[package]
name = "archivum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "archivum"
path = "src/main.rs"

[dependencies]
fronma = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tiny-skia = "0.11"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
tachyonfx = "0.25"
tui-textarea = { package = "tui-textarea-2", version = "0.11", features = ["crossterm", "search"] }
